Fixed overflow in addmarshalls page

--- a/css/addMarshalls.css
+++ b/css/addMarshalls.css
@@ -6,12 +6,20 @@ body {
 }
 
 .addMarshall {
-    width: 80%;
+    width: 100vw;
     margin: 0 auto;
     padding-bottom: 5vh;
     box-sizing: border-box;
     height: 95vh;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.addMarshall .marshalls {
+    width: 80%;
 }
 
 .addMarshall::-webkit-scrollbar { 
@@ -23,8 +31,9 @@ body {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    width: 98%;
-    margin: 1%;
+    width: 100%;
+    height: 40px;
+    margin: 1rem 0;
     text-decoration: none;
 }
 
